--- a/TechTalk.JiraRestClient/TechTalk.JiraRestClient.csproj
+++ b/TechTalk.JiraRestClient/TechTalk.JiraRestClient.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="RestSharp, Version=105.2.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\jiraconnector\packages\RestSharp.105.2.2\lib\net45\RestSharp.dll</HintPath>
+      <HintPath>..\..\HackwardSync\packages\RestSharp.105.2.2\lib\net45\RestSharp.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
